<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/chatsFragment">

    <fragment
        android:id="@+id/chatsFragment"
        android:name="com.example.chatlogger.fragments.ChatsFragment"
        android:label="@string/chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/contactsFragment"
        android:name="com.example.chatlogger.fragments.ContactsFragment"
        android:label="@string/contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.chatlogger.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>